--- a/Semana 04/Jupyter/03 - Histograma.ipynb
+++ b/Semana 04/Jupyter/03 - Histograma.ipynb
@@ -416,6 +416,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recordemos instalar pydataset\n",
+    "!pip install pydataset"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {
     "colab": {
